# lab_03_cpp

./: CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: Figure.h  FiguresArray.h  Pentagon.h  Rhombus.h  Trapeze.h
src/: FiguresArray.cpp  Pentagon.cpp  Rhombus.cpp  Trapeze.cpp
tests/: test_figures.cpp
